# Sentiment-analysis-MEPPDS

./: .env  .gitignore  DockerFile  Dockerfile  LICENSE  README.md  TweetDataset.py  api.py  architectures.py  bluesky.py  data_processing.py  environment.yml  index.html  install.sh  main.py  modular.py  no_ui.py  parquet_to_csv.py  requirements.txt  requirements2.txt  retrain.py  style.css  train.ipynb  train.py  train_flow.py  trainer.py  upload_s3.sh  utils.py
.github/workflows/: ci.yml  prod.yml
api_folder/: api.py  no_ui.py  run.sh
app/: api.py  run.sh
classes/: TweetDataset.py  architectures.py  trainer.py
deployment/: deployment.yml
notebook/: shit.ipynb  train.ipynb
scripts/: bluesky.py  data_processing.py  retrain.py  train_flow.py
sentiment/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
sentiment/.github/workflows/: ci-cd.yml
sentiment/docs/: Makefile  conf.py  example.ipynb
sentiment/src/sentiment/: __init__.py
site/: style.css
src/data/: data.py
src/models/: models.py
src/pipeline/: pipeline.py
utils/: filter_annotations.py  utils.py
